added unsafe logic for future rust integration
added more SVG support

added support for directByteBuffer writing in Pipe

restore to fewer socket readers

update scheduler timer

new connections optimized on latency